--- a/lab2/Intranet/Views/Home/Index.cshtml
+++ b/lab2/Intranet/Views/Home/Index.cshtml
@@ -25,8 +25,7 @@
         <a href="#myModal" role="button" class="btn  btn-primary btn-large" data-toggle="modal"
             data-target="#myModal">View Code &raquo;</a></p>
 </div>
-<div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-    aria-hidden="true">
+<div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"     aria-hidden="true">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
             ×</button>
@@ -76,34 +75,29 @@
 <div class="row-fluid">
     <div class="span4">
         <h2>
-            Heading</h2>
+            JS nummergissarspel</h2>
         <p>
-            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
-            commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-            Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+            nummergissarspel med js
         </p>
         <p>
-            <a class="btn" href="#">View details &raquo;</a></p>
+         
+            <a class="btn" href="@Url.Content("~/game")">spela &raquo;</a></p>
     </div>
     <div class="span4">
         <h2>
-            Heading</h2>
+           Postback nummergissarspel</h2>
         <p>
-            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
-            commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-            Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+            nummergissarspel med Postback
         </p>
         <p>
-            <a class="btn" href="#">View details &raquo;</a></p>
+            <a class="btn" href="#">spela &raquo;</a></p>
     </div>
     <div class="span4">
         <h2>
-            Heading</h2>
+            annat</h2>
         <p>
-            Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam.
-            Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus
-            commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            blah blah .</p>
         <p>
-            <a class="btn" href="#">View details &raquo;</a></p>
+            <a class="btn" href="#">öppna &raquo;</a></p>
     </div>
 </div>
