--- a/lab2/Intranet/Views/Shared/_Layout.cshtml
+++ b/lab2/Intranet/Views/Shared/_Layout.cshtml
@@ -32,5 +32,7 @@
     <script src="@Url.Content("~/Scripts/clock.js")" type="text/javascript"></script>
        <script src="@Url.Content("~/Scripts/prettify.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/site.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/game.js")" type="text/javascript"></script>
+
 </body>
 </html>
