--- a/lab2/Intranet/Views/Home/Index.cshtml
+++ b/lab2/Intranet/Views/Home/Index.cshtml
@@ -81,7 +81,7 @@
         </p>
         <p>
          
-            <a class="btn" href="@Url.Content("~/game")">spela &raquo;</a></p>
+            <a class="btn" href="@Url.Content("~/game/jsgame")">spela &raquo;</a></p>
     </div>
     <div class="span4">
         <h2>
@@ -90,7 +90,7 @@
             nummergissarspel med Postback
         </p>
         <p>
-            <a class="btn" href="#">spela &raquo;</a></p>
+             <a class="btn" href="@Url.Content("~/game/Postbackgame")">spela &raquo;</a></p>
     </div>
     <div class="span4">
         <h2>
