--- a/lab2/Intranet/Content/site.css
+++ b/lab2/Intranet/Content/site.css
@@ -56,12 +56,11 @@
      -webkit-border-radius: 7px;
 }
 
-#tab2 p {
+.game p {
     padding: 2px;
     font-style: italic;
 }
-
-#tab2 #correct {
+.game #correct {
     color: rgb(220, 12, 12);
     font-style: normal;
     font-weight: bold;
