--- a/lab2/Intranet/Views/Shared/_NavPartial.cshtml
+++ b/lab2/Intranet/Views/Shared/_NavPartial.cshtml
@@ -3,8 +3,8 @@
         CV
         <b class="caret"></b></a>
         <ul class="dropdown-menu">
-            <li><a href="@Url.Content("~/arash")">arash cv</a></li>
-            <li><a href="@Url.Content("~/someone")">someone cv</a></li>
+            <li><a href="@Url.Content("~/home/arash")">arash cv</a></li>
+            <li><a href="@Url.Content("~/home/someone")">someone cv</a></li>
         </ul>
     </li>  
     <li><a href="@Url.Content("~/home/about")" id="about">About</a></li>     
