--- a/lab2/Intranet/Views/Shared/_NavPartial.cshtml
+++ b/lab2/Intranet/Views/Shared/_NavPartial.cshtml
@@ -7,5 +7,15 @@
             <li><a href="@Url.Content("~/home/someone")">someone cv</a></li>
         </ul>
     </li>  
+    <li class="dropdown active"><a href="#" class="dropdown-toggle" data-toggle="dropdown">
+        Nummer Spel
+        <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+            <li><a href="@Url.Content("~/game")">Controller index</a></li>
+            <li><a href="@Url.Content("~/game/jsgame")">Java Script</a></li>
+            <li><a href="@Url.Content("~/game/Postbackgame")">PostBack</a></li>
+        </ul>
+    </li>  
+
     <li><a href="@Url.Content("~/home/about")" id="about">About</a></li>     
 </ul>                                   
