--- a/lab2/Intranet/Views/Shared/_Layout.cshtml
+++ b/lab2/Intranet/Views/Shared/_Layout.cshtml
@@ -8,6 +8,11 @@
     <link href="@Url.Content("~/Content/bootstrap.min.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/site.css")" rel="stylesheet" type="text/css" />  
     <link href="@Url.Content("~/Content/pretty.css")" rel="stylesheet" type="text/css" />  
+    <script src="@Url.Content("~/Scripts/jquery-1.8.0.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/clock.js")" type="text/javascript"></script>
+@*    <script src="@Url.Content("~/Scripts/game.js")" type="text/javascript"></script>*@
+    <script src="@Url.Content("~/Scripts/site.js")" type="text/javascript"></script>
 </head>
 <body>
     <div class="navbar navbar-fixed-top">
@@ -27,12 +32,10 @@
                 &copy; Company 2012</p>
         </footer>
     </div>
-    <script src="@Url.Content("~/Scripts/jquery-1.8.0.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/clock.js")" type="text/javascript"></script>
-       <script src="@Url.Content("~/Scripts/prettify.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/site.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/game.js")" type="text/javascript"></script>
+
+   
+    
+  
 
 </body>
 </html>
